# AudioApp

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md
cpp/cli/: CMakeLists.txt  main.cpp
cpp/include/: audio_processor.h  inference_engine.h  model_loader.h  utils.h
cpp/src/: CMakeLists.txt  audio_processor.cpp  inference_engine.cpp  model_loader.cpp  utils.cpp
examples/: README.md
mobile/: README.md
scripts/: convert_to_onnx.py
